--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -29,3 +29,18 @@
     <p>What differentiates Flatirons Recovery Center from other treatment providers is our mindfulness-based curriculum, commitment to small group sizes, and belief that all our clients are basically good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
     <p>Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
 </div>
+
+<div class="muted">
+
+    <div class="wrap">
+        <div class="row center-xs">
+            <h2>Meet Our Team</h2>
+        </div>
+        <div class="row center-xs">
+            <div class="col-xs">
+                <h4>Visit our team page, and learn more about the compassionate professionals that make up our team.</h4>
+                <a class="button border" href="/team">Learn More</a>
+            </div>
+        </div>
+    </div>
+</div>
