--- a/src/index.v.html
+++ b/src/index.v.html
@@ -54,7 +54,8 @@
     <div class="row">
         <div class="col-xs-12 col-sm-3">
             <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+            <h4>Mark Oberg LPC, LAC</h4>
+            <p>Executive Director/Clinical Director</p>
         </div>
         <div class="col-xs-12 col-sm-3">
             <img src="https://via.placeholder.com/600x900" alt="">
