fixed form inputs

--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -98,11 +98,6 @@
                 </label>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <label>Patient DOB
-                    <input type="date" name="patientDob" required>
-                </label>
-            </div>
-            <div class="col-xs-12 col-sm-6">
                 <label>Patient Gender
                     <input name="patientGender" required>
                 </label>
@@ -155,7 +150,7 @@
             </div>
             <div class="col-xs-12 col-sm-6">
                 <label>Primary DOB
-                    <input name="primaryDob">
+                    <input type="date" name="primaryDob">
                 </label>
             </div>
             <div class="col-xs-12 col-sm-6">
@@ -222,6 +217,3 @@
     </div>
 </form>
 </div>
-
-Provider benefits phone number on back of card
-Policy effective date
