updates to content

--- a/src/mindfulness/index.v.html
+++ b/src/mindfulness/index.v.html
@@ -16,7 +16,7 @@
             <div class="row center-xs">
                 <div class="col-xs">
                     <h1>MINDFULNESS</h1>
-                    <h3>Mindfulness-based Curriculum</h3>
+                    <h3>Mindfulness-influenced Curriculum</h3>
                 </div>
             </div>
         </div>
