--- a/src/index.v.html
+++ b/src/index.v.html
@@ -29,11 +29,17 @@
                     <h2>About Us</h2>
                     <hr>
                 </div>
+                <!-- What Treatment Looks Like At Flatirons Recovery
+
+At Flatirons Recovery, clients can expect compassionate, evidence-based dual diagnosis treatment for substance use and mental health disorders.
+
+Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, healing from trauma, learning skills to successfully cope with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery. -->
+
                 <div class="col-xs-12">
                     <h3>Our Mission</h3>
                     <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our <a href="/mindfulness">mindfulness-based curriculum</a>, commitment to small group sizes, and belief that all our clients are basically good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are basically good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
             </div>
             <div class="row center-xs">
@@ -118,12 +124,12 @@
         <div class="row">
             <div class="col-xs-12 col-md-6">
                 <h3>Mental Health</h3>
-                <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxiety</strong> disorder, <strong>bi-polar</strong> disorder, <strong>depression</strong> and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
+                <p>Dual-diagnosis refers to a person who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as depression, anxiety, bi-polar disorder, or post-traumatic stress disorder. Also referred to as co-occurring disorders, the highly skilled therapeutic and medical staff at Flatirons Recovery are trained to address the individual mental health challenges of all our clients.</p>
                 <a class="button border" href="/mental-health">Learn More - Mental Health</a>
             </div>
             <div class="col-xs-12 col-md-6">
                 <h3>Addiction Treatment</h3>
-                <p>Need content here</p>
+                <p>Flatirons Recovery’s addiction treatment program helps clients suffering from a wide range of addictions begin to heal and recover. Our individualized, mindfulness-influenced addictions treatment focuses on building relapse prevention skills, healing trauma and other mental health disorders, developing healthier eating and exercise habits, as well as connecting to supportive communities for recovery.</p>
                 <a class="button border" href="/addiction">Learn More - Addictions</a>
             </div>
         </div>
