logo tweak, bio update

--- a/src/team/index.v.html
+++ b/src/team/index.v.html
@@ -26,7 +26,7 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
+            <img src="./team/mark_oberg.jpg" alt="">
             <h4>Mark Oberg LPC, LAC</h4>
             <p>Executive Director/Clinical Director</p>
         </div>
