remove team page stuff

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -49,7 +49,7 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
     </div>
     <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
 </div>
-
+<!-- 
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
@@ -79,7 +79,7 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
     <div class="row center-xs">
         <a class="button blue" href="/team">Our Team</a>
     </div>
-</div>
+</div> -->
 
 <div class="blue">
     <!-- { "partial": "/partials/call-to-action-1.p.html" } -->
