--- a/src/index.v.html
+++ b/src/index.v.html
@@ -49,7 +49,7 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
     </div>
     <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
 </div>
-<!-- 
+<!--
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
@@ -133,22 +133,6 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
                 <a class="button border" href="/addiction">Learn More - Addictions</a>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="col-xs">
-                <h3>ANXIETY DISORDER</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-
-            <div class="col-xs">
-                <h3>BI-POLAR DISORDER</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
-
-            <div class="col-xs">
-                <h3>POST-TRAUMATIC STRESS DISORDER</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-        </div> -->
     </div>
 </div>
 
@@ -156,7 +140,9 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
     <form class="row">
         <div class="col-xs-12">
             <h2>Message Us</h2>
-            <p>Send us a confidential message, and one of our admissions professionals will follow up with you.</p>
+            <p>To begin your healing journey from addiction simply fill out the form below, or call us at <a href="tel:719-626-1295" data-track="click: phone, click">719-626-1295</a>.</p>
+            <p>A member of our Admissions Team will reply to you as soon as possible to begin the Admissions process, and to answer any questions that you may have about our treatment program.</p>
+            <p>If you’d like Flatirons Recovery to <a href="/admission#verify-insurance">verify your insurance</a>, you may do that here.</p>
         </div>
         <div class="col-xs-12 col-sm-6">
             <label>first name</label>
@@ -194,4 +180,5 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
             <button class="button blue" type="submit">Submit</button>
         </div>
     </form>
+    <p><em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA Confidentiality Policy</a>.</em></p>
 </div>
