--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -25,18 +25,19 @@
 
 <div class="row wrap">
     <div class="col-xs-12 col-sm-4 col-md-3">
-        <div class="orange">
-            <h3>Contact Information:</h3>
-            <p><strong>Phone:</strong><br /> <a href="tel:719-626-1295" data-track="click: phone, click">719-626-1295</a></p>
-            <p><strong>Email:</strong><br /> <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
-            <p><strong>Address:</strong><br /> <a href="#">123 abs st, Boulder CO</a></p>
-            <p>whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
-            <p>Social</p>
-        </div>
+        <h3>Contact Information:</h3>
+        <hr>
+        <p><strong>Phone:</strong><br /> <a href="tel:719-626-1295" data-track="click: phone, click">719-626-1295</a></p>
+        <p><strong>Email:</strong><br /> <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
+        <p><strong>Address:</strong><br /> <a href="#">123 abs st, Boulder CO</a></p>
+        <p>Whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-9">
         <h2>Contact Flatirons Recovery</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>To begin your healing journey from addiction simply fill out the form below, or call us at <a href="tel:719-626-1295" data-track="click: phone, click">719-626-1295</a>.</p>
+        <p>A member of our Admissions Team will reply to you as soon as possible to begin the Admissions process, and to answer any questions that you may have about our treatment program.</p>
+        <p>If you’d like Flatirons Recovery to <a href="/admission#verify-insurance">verify your insurance</a>, you may do that here.</p>
+
         <form class="row">
             <div class="col-xs-12">
                 <h3>send us a message</h3>
@@ -74,8 +75,9 @@
                 <textarea name="message" required></textarea>
             </div>
             <div class="col-xs-12">
-                <button class="button orange" type="submit">Submit</button>
+                <button class="button blue" type="submit">Submit</button>
             </div>
         </form>
+        <p><em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA Confidentiality Policy</a>.</em></p>
     </div>
 </div>
