mobile header clean up

--- a/src/addiction/cocaine/index.v.html
+++ b/src/addiction/cocaine/index.v.html
@@ -10,13 +10,9 @@
 </style>
 <div class="main">
     <div class="gradient">
-        <div class="wrap">
-            <div class="row center-xs">
-                <div class="col-xs">
-                    <h1>COCAINE ADDICTION</h1>
-                    <h3>learn more about the effects of cocaine use and addiction</h3>
-                </div>
-            </div>
+        <div>
+            <h1>COCAINE ADDICTION</h1>
+            <h3>learn more about the effects of cocaine use and addiction</h3>
         </div>
     </div>
 </div>
