--- a/src/addiction/index.v.html
+++ b/src/addiction/index.v.html
@@ -8,15 +8,12 @@
         background-image: url('/admission/flatirons-hill.jpg');
     }
 </style>
+
 <div class="main">
     <div class="gradient">
-        <div class="wrap">
-            <div class="row center-xs">
-                <div class="col-xs">
-                    <h1>ADDICTIONS TREATED</h1>
-                    <h3>structured treatment at a number of levels of care</h3>
-                </div>
-            </div>
+        <div>
+            <h1>ADDICTIONS TREATED</h1>
+            <h3>structured treatment at a number of levels of care</h3>
         </div>
     </div>
 </div>
