--- a/src/addiction/prescription-medication/index.v.html
+++ b/src/addiction/prescription-medication/index.v.html
@@ -10,13 +10,9 @@
 </style>
 <div class="main">
     <div class="gradient">
-        <div class="wrap">
-            <div class="row center-xs">
-                <div class="col-xs">
-                    <h1>PRESCRIPTION MEDICATION ADDICTION</h1>
-                    <h3>learn more about prescription drug addiction and abuse</h3>
-                </div>
-            </div>
+        <div>
+            <h1>PRESCRIPTION ADDICTION</h1>
+            <h3>learn more about prescription drug addiction and abuse</h3>
         </div>
     </div>
 </div>
