--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -12,13 +12,9 @@
 
 <div class="main">
     <div class="gradient">
-        <div class="wrap">
-            <div class="row center-xs">
-                <div class="col-xs">
-                    <h1>CONTACT</h1>
-                    <h3>Speak with a Flatirons Recovery professional</h3>
-                </div>
-            </div>
+        <div>
+            <h1>CONTACT</h1>
+            <h3>Speak with a Flatirons Recovery professional</h3>
         </div>
     </div>
 </div>
