--- a/src/sober-living/index.v.html
+++ b/src/sober-living/index.v.html
@@ -10,13 +10,9 @@
 </style>
 <div class="main">
     <div class="gradient">
-        <div class="wrap">
-            <div class="row center-xs">
-                <div class="col-xs">
-                    <h1>SOBER LIVING</h1>
-                    <h3>our colorado sober living facilities</h3>
-                </div>
-            </div>
+        <div>
+            <h1>SOBER LIVING</h1>
+            <h3>our colorado sober living facilities</h3>
         </div>
     </div>
 </div>
