message us partial

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -139,10 +139,7 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
 <div class="wrap" id="message">
     <form class="row">
         <div class="col-xs-12">
-            <h2>Message Us</h2>
-            <p>To begin your healing journey from addiction simply fill out the form below, or call us at <a href="tel:719-626-1295" data-track="click: phone, click">719-626-1295</a>.</p>
-            <p>A member of our Admissions Team will reply to you as soon as possible to begin the Admissions process, and to answer any questions that you may have about our treatment program.</p>
-            <p>If you’d like Flatirons Recovery to <a href="/admission#verify-insurance">verify your insurance</a>, you may do that here.</p>
+            <!-- { "partial": "/partials/message-us.p.html" } -->
         </div>
         <div class="col-xs-12 col-sm-6">
             <label>first name</label>
