--- a/src/addiction/alcohol/index.v.html
+++ b/src/addiction/alcohol/index.v.html
@@ -13,7 +13,7 @@
     <div class="gradient">
         <div>
             <h1>ALCOHOL ADDICTION</h1>
-            <h3>learn more about alcohol user disorder and addiction</h3>
+            <h3>learn more about alcohol use disorder and addiction</h3>
         </div>
     </div>
 </div>
