--- a/dst/error.html
+++ b/dst/error.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title><!-- { "variable": "title" } --></title>
+    <title>Flatirons Recovery Center | Colorado Substance Abuse Treatment</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="<!-- { "variable": "description" } -->">
-    <meta name="keywords" content="<!-- { "variable": "keywords" } -->">
+    <meta name="description" content="Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
+    <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
 
 	<script>window.AID='UA-';</script>
 	<script src="/assets/analytic.min.js"></script>
@@ -81,7 +81,9 @@
     </header>
 
     <main>
-        <h1>Oops There Was An Error</h1>
+        
+
+<h1>Oops There Was An Error</h1>
     </main>
 
     <footer>
