--- a/src/error.v.html
+++ b/src/error.v.html
@@ -1,1 +1,7 @@
+<!-- {
+    "title": "Flatirons Recovery Center | Colorado Substance Abuse Treatment",
+    "description": "Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
+    "keywords": "addiction treatment, substance use, mental health disorder"
+} -->
+
 <h1>Oops There Was An Error</h1>
