updated error page

--- a/dst/error.html
+++ b/dst/error.html
@@ -83,7 +83,14 @@
     <main>
         
 
-<h1>Oops There Was An Error</h1>
+<div class="main">
+    <div class="gradient">
+        <div>
+            <h1>Oops</h1>
+            <h3>We could not find the page your looking for.</h3>
+        </div>
+    </div>
+</div>
     </main>
 
     <footer>
