--- a/src/error.v.html
+++ b/src/error.v.html
@@ -4,4 +4,11 @@
     "keywords": "addiction treatment, substance use, mental health disorder"
 } -->
 
-<h1>Oops There Was An Error</h1>
+<div class="main">
+    <div class="gradient">
+        <div>
+            <h1>Oops</h1>
+            <h3>We could not find the page your looking for.</h3>
+        </div>
+    </div>
+</div>
