added selected/disabled, rebuilt

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -160,7 +160,7 @@ Our treatment team focuses on healing the whole individual, instead of focusing 
         <div class="col-xs-12 col-sm-4">
             <label>how'd you hear about us</label>
             <select name="referral">
-                <option value="none">none</option>
+                <option value="none" selected disabled>none</option>
                 <option value="social media">social media</option>
                 <option value="doctor/therapist">doctor/therapist</option>
                 <option value="hospital system">hospital system</option>
