--- a/dst/contact/index.html
+++ b/dst/contact/index.html
@@ -137,7 +137,7 @@
             <div class="col-xs-12 col-sm-4">
                 <label>how'd you hear about us</label>
                 <select name="referral">
-                    <option value="none">none</option>
+                    <option value="none" selected disabled>none</option>
                     <option value="social media">social media</option>
                     <option value="doctor/therapist">doctor/therapist</option>
                     <option value="hospital system">hospital system</option>
