--- a/dst/contact/index.html
+++ b/dst/contact/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="How to contact Flatirons Recovery, a drug and alcohol treatment center in Colorado.">
     <meta name="keywords" content="contact flatirons recovery">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
