--- a/dst/mental-health/index.html
+++ b/dst/mental-health/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Mental health and dual diagnosis treatment and how it refers to Flatirons Recovery. Learn more!">
     <meta name="keywords" content="dual diagnosis treatment, mental health disorders, treatment therapy">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
