--- a/dst/addiction/alcohol/index.html
+++ b/dst/addiction/alcohol/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="alcohol addiction">
     <meta name="keywords" content="mens alcohol addiction, substance abuse, colorado alcohol addiction">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
