--- a/dst/addiction/cocaine/index.html
+++ b/dst/addiction/cocaine/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="cocaine addiction">
     <meta name="keywords" content="mens cocaine addiction, substance abuse, colorado cocaine addiction">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
