--- a/dst/addiction/heroin/index.html
+++ b/dst/addiction/heroin/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="heroin addiction">
     <meta name="keywords" content="mens heroin addiction, substance abuse, colorado heroin addiction">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
