--- a/dst/addiction/index.html
+++ b/dst/addiction/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="The common addictions Flatirons Recovery treats and how to tell if you or a loved one is abusing a substance. Learn more about addictions we treat!">
     <meta name="keywords" content="mens alcohol addiction, substance abuse, colorado drug addiction">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
