--- a/dst/admission/index.html
+++ b/dst/admission/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Our treatment center addmission process and what to expect.">
     <meta name="keywords" content="rehab admission process">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
