--- a/dst/confidentiality/index.html
+++ b/dst/confidentiality/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!">
     <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
