--- a/dst/faq/index.html
+++ b/dst/faq/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="See the frequently asked questions at Flatirons Recovery. See our FAQs, and learn more!">
     <meta name="keywords" content="covid 19, infectious disease">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
