--- a/dst/index.html
+++ b/dst/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!">
     <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
