--- a/dst/mindfulness/index.html
+++ b/dst/mindfulness/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Mindfulness - the capacity to be with whatever it is that is happening with you at any given moment, in a non-judgmental way. Read more.">
     <meta name="keywords" content="mindfulness practices, drug and alcohol treatment">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
