--- a/dst/sober-living/index.html
+++ b/dst/sober-living/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Sober Living">
     <meta name="keywords" content="prescription drug addiction, substance abuse, colorado prescription drug addiction">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
