--- a/dst/team/index.html
+++ b/dst/team/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Meet our team of compassionate professions. Learn more about the people that make Flatirons Recovery.">
     <meta name="keywords" content="professional team, compassionate therapists, treatment professional">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
