--- a/dst/treatment/index.html
+++ b/dst/treatment/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Learn about our drug and alcohol treatment program, with a timeline of what clients should expect. ">
     <meta name="keywords" content="evidence-based treatment, treatment, disorders, addiction therapy">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
