--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -9,7 +9,7 @@
     <meta name="description" content="<!-- { "variable": "description" } -->">
     <meta name="keywords" content="<!-- { "variable": "keywords" } -->">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
