--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -25,7 +25,7 @@
         <hr>
         <p><strong>Phone:</strong><br /> <a href="tel:719-626-1295" data-track="click: phone, click">719-626-1295</a></p>
         <p><strong>Email:</strong><br /> <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
-        <p><strong>Address:</strong><br /> <a href="#">123 abs st, Boulder CO</a></p>
+        <p><strong>Address:</strong><br /> <a href="https://goo.gl/maps/qw276Tekaxk3NL3e6" target="_blank">2770 Dagny Way Suite 202 Lafayette, CO 80026</a></p>
         <p>Whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-9">
